src/objects/Account_Competitors__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPS - Global Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Account_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chemistry__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Chemistry</label>
        <picklist>
            <picklistValues>
                <fullName>Acrylic and Styrenated Acrylic emulsions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alkyds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorant/Pigment Dispersions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispersed Alkyds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomerics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low VOC Coalescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Modified Urethanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyesters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyurethane Dispersions and hybrids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyurethanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urethane Modified Alkyds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinyl Acrylic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Accurate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allnex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anderson Dev.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arnette Polymers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axalta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemtura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chromaflo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook Composites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cytec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltech Resins Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM Neo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerald Perf. Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gellner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guertin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hauthaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGM Resins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpolymer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jones-Blair Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lubrizol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallard Creek</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Volume (lbs)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Competitors</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Account Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>